paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.compile.log
error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:6:31
  |
6 | static mut P_I1: *const i32 = unsafe { &I1 };
  |                               ^^^^^^^^^^^^^^
  |
  = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:7:31
  |
7 | static mut P_I2: *const i32 = unsafe { &I2 };
  |                               ^^^^^^^^^^^^^^

error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:8:31
  |
8 | static mut P_I4: *const i32 = unsafe { &I4 };
  |                               ^^^^^^^^^^^^^^

error: usage of an `unsafe` block
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:9:31
  |
9 | static mut P_I5: *const i32 = unsafe { &I5 };
  |                               ^^^^^^^^^^^^^^

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:12:5
   |
12 | /     unsafe {
13 | |         if I1 != 1 {
14 | |             return 1;
...  |
56 | |     }
   | |_____^

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/external_definitions/external_objs_1/sample_002/target.rs:11:14
   |
11 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.